--- a/EMS_Latest/src/main/resources/Bundle.properties
+++ b/EMS_Latest/src/main/resources/Bundle.properties
@@ -1,2 +1,5 @@
 login.title=Login
 user.title=User Dashboard
+employee.title=Employee Dashboard
+areaOfWork.title=Area of Work Status
+leave.title=Leave Module
