--- a/EMS_Latest/pom.xml
+++ b/EMS_Latest/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.codetreatise</groupId>
-	<artifactId>JavaFXSpringBootApp</artifactId>
+	<groupId>com.maheshUday</groupId>
+	<artifactId>EMS</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0</version>
 
-	<name>JavaFXSpringBootApp</name>
+	<name>EMS</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -41,7 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -51,6 +55,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -68,6 +76,15 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/*.pdf</exclude>
+					<exclude>**/*.jrxml</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
 	<description>The Application front-end designed using JavaFX and Spring Boot is used as backend to bootstrap the app. The scenes are created in FXML using Scene Builder. The app demonstrate simple CRUD using Spring Boot and JavaFX.</description>
 </project>
