--- a/EMS_Latest/src/main/resources/Bundle.properties
+++ b/EMS_Latest/src/main/resources/Bundle.properties
@@ -3,3 +3,6 @@ user.title=User Dashboard
 employee.title=Employee Dashboard
 areaOfWork.title=Area of Work Status
 leave.title=Leave Module
+allocation.title=Allocation Module
+training.title=Training Module
+assessment.title=Assessment Module
