--- a/EMS_Latest/src/main/resources/application.properties
+++ b/EMS_Latest/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=root@123
 spring.datasource.initialize=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.SQL=debug  	
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
